test_programs/compile_failure/noirc_frontend_tests_deny_inline_attribute_on_unconstrained/src/main.nr

        #[no_predicates]
        unconstrained pub fn foo(x: Field, y: Field) {
            assert(x != y);
        }
    